--- a/src/app/planta/planta.component.html
+++ b/src/app/planta/planta.component.html
@@ -1,3 +1,18 @@
-<p>
-  planta works!
-</p>
+<table class="table custom-table">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Nombre común</th>
+      <th scope="col">Tipo</th>
+      <th scope="col">Clima</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let planta of plantas;">
+      <td class="bold">{{ planta.id }}</td>
+      <td>{{ planta.nombre_comun }}</td>
+      <td>{{ planta.tipo }}</td>
+      <td>{{ planta.clima }}</td>
+    </tr>
+  </tbody>
+</table>
