--- a/src/app/planta/planta.component.html
+++ b/src/app/planta/planta.component.html
@@ -16,3 +16,5 @@
     </tr>
   </tbody>
 </table>
+<p>Total plantas interior: {{plantasInterior}}</p>
+<p>Total plantas exterior: {{plantasExterior}}</p>
